@@ -3,5 +3,6 @@ python:
   - "2.7"
 install:
     - pip install -Ur requirements.txt
+    - pip install -Ur tests/requirements.txt
 script:
     - python -m unittest discover
